<Database>: Hoàn thiện lỗi, chỉnh sửa bug cho database và logic